--- a/header_khs.html
+++ b/header_khs.html
@@ -6,7 +6,7 @@
     <title>KHS Impex</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/style_khs.css">
+    <link rel="stylesheet" type="text/css" href="css/header_khs.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
 </head>
 
