--- a/header_khs.html
+++ b/header_khs.html
@@ -21,7 +21,7 @@
 
         <ul>
             <li>
-                <a href="#">Home</a>
+                <a href="#" class="navbar_active">Home</a>
             </li>
             <li>
                 <label for="btn-2" class="show"> Our Products <span class="fa fa-arrow-down"></span></label>
@@ -51,7 +51,7 @@
                     </li>
                     <li>
                         <label for="btn-4" class="show_3"> T-Shirts <span class="fa fa-arrow-down"></span></label>
-                        <a href="#">T-Shirts
+                        <a href="#">T - Shirts
                             
                         </a>
                         <input type="checkbox" id="btn-4">
@@ -61,7 +61,7 @@
                                 <a href="#">Collar</a>
                             </li>
                             <li>
-                                <a href="#">Round-Neck</a>
+                                <a href="#">Round - Neck</a>
                             </li>
 
                         </ul>
