--- a/header_khs.html
+++ b/header_khs.html
@@ -16,6 +16,7 @@
         <div class="logo"><img class="logo_img" src="images/logo_new-removebg-preview-removebg-preview.png">KHS Impex Pvt. Ltd.</div>
         <label for="btn" class="icon">
             <span class="fa fa-bars" style="color:#2b6af2"></span>
+            <span class = "fa fa-times" style="color:#2b6af2"></span>
         </label>
         <input type="checkbox" id="btn">
 
