--- a/header_khs.html
+++ b/header_khs.html
@@ -15,8 +15,7 @@
     <nav>
         <div class="logo"><img class="logo_img" src="images/logo_new-removebg-preview-removebg-preview.png">KHS Impex Pvt. Ltd.</div>
         <label for="btn" class="icon">
-            <span class="fa fa-bars" style="color:#2b6af2"></span>
-            <span class = "fa fa-times" style="color:#2b6af2"></span>
+            <div class="toggle_1"><span class="fa fa-bars" style="color:#2b6af2"></span></div>
         </label>
         <input type="checkbox" id="btn">
 
@@ -32,11 +31,11 @@
 
                 <ul>
                     <li>
-                        <label for="btn-3" class="show_3"> Knitted Uppers <span class="fa fa-arrow-down"></span></label>
+                        <label for="nab" class="show_3"> Knitted Uppers <span class="fa fa-arrow-down " ></span></label>
                         <a href="">Knitted Uppers
                             
                         </a>
-                        <input type="checkbox" id="btn-3">
+                        <input type="checkbox" id="nab">
                         <ul>
 
                             <li>
