--- a/header_khs.html
+++ b/header_khs.html
@@ -31,11 +31,11 @@
 
                 <ul>
                     <li>
-                        <label for="nab" class="show_3"> Knitted Uppers <span class="fa fa-arrow-down " ></span></label>
+                        <label for="btn-3" class="show_3"> Knitted Uppers <span class="fa fa-arrow-down " ></span></label>
                         <a href="">Knitted Uppers
                             
                         </a>
-                        <input type="checkbox" id="nab">
+                        <input type="checkbox" id="btn-3">
                         <ul>
 
                             <li>
