--- a/header_khs.html
+++ b/header_khs.html
@@ -32,7 +32,7 @@
                 <ul>
                     <li>
                         <label for="btn-3" class="show_3"> Knitted Uppers <span class="fa fa-arrow-down " ></span></label>
-                        <a href="">Knitted Uppers
+                        <a href="#">Knitted Uppers
                             
                         </a>
                         <input type="checkbox" id="btn-3">
